# lob-engine

./: .dockerignore  .gitattributes  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: CMakeLists.txt  bench_engine.cpp  latency_histogram.cpp  workload.hpp
benchmarks/results/: latency_percentiles.csv
data/: btcusdt_sample.jsonl
include/lob/: events.hpp  matching_engine.hpp  order_book.hpp  types.hpp
notebooks/: obi_forward_returns.ipynb
python/: CMakeLists.txt  bindings.cpp
python/lob/: __init__.py  analytics.py  replay.py  tearsheet.py
python/lob/ingest/: __init__.py  binance.py  l2.py
python/tests/: test_analytics.py  test_bindings.py  test_ingest.py  test_replay.py  test_tearsheet.py
src/: matching_engine.cpp  order_book.cpp
tests/: CMakeLists.txt  helpers.hpp  test_matching.cpp  test_modify_stp.cpp  test_order_book.cpp  test_time_in_force.cpp
web/: index.html
web/css/: style.css
web/js/: app.js  lob-engine.js
web/wasm/: build.sh  embind.cpp
